Website Release Candidate

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <li>Word repetition in top charting songs has been increasing over the decades.</li>
           <li>Over 55% of the artists in our data set had only one top charting song.</li>
           <li>Offensive word use dramatically increased in the 1990s and continued to grow rapidly into the 2000s.</li>
+          <li>Over 15 songs are covers or remakes of songs already in the data set.</li>
         </ul>
       </div>
 
@@ -323,7 +324,7 @@
         Using the word frequency displays from above, one can conclude that <i>love</i> is at least among the most persistent themes in popular music, being measurably in common with prolific artists through the years.
         Again though, is <i>love</i> really the most prevalent?
         While a cursory review of top artists lyrics further clarifies our intuition that songs &mdash; and by proxy, artists &mdash; can be linked by lyrics, it does not fully settle the question of timelessness for all charting songs since 1970.
-        With increased confidence, we pursued more rigorous and varied techniques to gain deeper insights into the variety of perspective that have charted across the last five decades, the outcomes of which are presented in the section to follow.
+        With increased confidence, we pursued more rigorous techniques to gain deeper insights into the variety of perspective that have charted across the last five decades, the outcomes of which are presented in the sections to follow.
       </p>
 
     </div>
@@ -612,7 +613,8 @@
 
       <h2>Timeless Words</h2>
       <p>
-        A large number of the words found in popular songs don’t make it from one decade to the next. Here we display the number of each type of word having lifespans from 1 to 5 decades, and also display the words spanning or enduring across all five-decade span. This inquiry uses the reduced vocabulary as described in <a href="#grp-data">Data</a> to mitigate the skewing effects of heavy repeated use of the same word in any given song.
+        A large number of the words found in popular songs don’t make it from one decade to the next. Here we display the number of each type of word having lifespans from one to five decades, and also display the words spanning or enduring across all five decades.
+        This inquiry uses the reduced vocabulary as described in <a href="#grp-data">Data</a> to mitigate the skewing effects of heavy repeated use of the same word in any given song.
       </p>
 
       <div class="vspace"></div>
