--- a/index.html
+++ b/index.html
@@ -107,9 +107,18 @@
         By measuring, exploring, and analyzing the lyrics using a variety of techniques &mdash; including statistical, natural language processing, and machine learning &mdash; at multiple levels of abstraction, we were able to draw some preliminary insights, which will be highlighted throughout.
       </p>
 
+      <h2>Screencast</h2>
+      An overview video is provided below. It has a running time of two minutes and is intended to provide
+      an executive summary of the project. This site goes go in far greater detail.
+
+      <div class="clearfix"></div>
+      <div class="center">
+        <iframe src="https://player.vimeo.com/video/148576080" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/148576080">Lyrics Lab: Modern Music Sentiment Analysis</a> from <a href="https://vimeo.com/user28496854">Mary Michael Johns</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+      </div>
+
       <div class="clearfix"></div>
 
-      <div class="vspace"></div>
+      <div class="vspace v50"></div>
 
       <div class="text-bubble center three-fourths-width ">
         It’s every generation throws a hero up the pop charts
