Website Release, Screencast language tweak

--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
       </p>
 
       <h2>Screencast</h2>
-      An overview video is provided below. It has a running time of two minutes and is intended to provide
-      an executive summary of the project. This site goes go in far greater detail.
+      <p>An overview video is provided below. It has a running time of two minutes and is intended to provide
+        an executive summary of the project. This site goes into far greater detail and we encourage you to
+        keep reading.</p>
 
       <div class="clearfix"></div>
       <div class="center">
